# PK-Battle-Simulator

./: CMakeLists.txt  CodeOverview.md  README.md  main.cpp
data/: learnset.txt  movedex.txt  pokedex.txt
include/: BattlePokemon.h  BattleSystem.h  Database.h  Game.h  InputValidation.h  LoadParty.h  Move.h  MoveEffects.h  Player.h
source/: BattlePokemon.cpp  BattleSystem.cpp  BattleSystem.h  CategoryEnum.h  Database.cpp  Database.h  InputValidation.h  LoadParty.cpp  LoadParty.h  Menu.cpp  Menu.h  Move.cpp  Move.h  MoveEffects.cpp  MoveEffects.h  Player.cpp  Pokemon.cpp  Pokemon.h  PokemonTypeEnum.h  SaveParty.cpp  SaveParty.h  StringToTypes.cpp
